--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -19,6 +19,7 @@
       {% include 'inc/panels/custom_fields.html' %}
     </div>
     <div class="col col-md-6">
+      {% for table in related_tables %}
       <div class="card">
         <h5 class="card-header">{{ table.name|capfirst }}</h5>
         <table class="table table-hover attr-table">
@@ -42,8 +43,8 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
-    {% endfor %}
+      </div>
+      {% endfor %}
       {% include 'inc/panels/tags.html' %}
       {% include 'inc/panels/comments.html' %}
     </div>
