--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -1,5 +1,5 @@
 {% extends 'generic/object_detail.html' %}
-{% load render_table %}
+{% load render_table from django_tables2 %}
 
 {% block content %}
 <h2>Solution: {{ object.name }}</h2>
