--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -1,9 +1,23 @@
-{% extends 'generic/object_detail.html' %}
+{% extends 'generic/object_list.html' %}
 {% load render_table from django_tables2 %}
 
 {% block content %}
-<h2>Solution: {{ object.name }}</h2>
+<div class="row mb-3">
+  <div class="col col-md-6">
+    <div class="card">
+      <h5 class="card-header">Solution</h5>
 
+      <table class="table table-hover attr-table">
+        <tr>
+          <th scope="row">Name</th>
+          <td>{{ object.name }}</td>
+        </tr>
+      </table>
+    </div>
+    {% include 'inc/panels/custom_fields.html' %}
+  </div>
+  
+<div class="col col-md-6">
 <div class="card">
     <h5 class="card-header">Service Templates</h5>
     <div class="card-body">
