--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -1,4 +1,4 @@
-{% extends 'generic/object_list.html' %}
+{% extends 'generic/object.html' %}
 {% load render_table from django_tables2 %}
 
 {% block content %}
