--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -21,14 +21,14 @@
 <div class="card">
     <h5 class="card-header">Service Templates</h5>
     <div class="card-body">
-        {% render_table service_templates_table %}
+        {% render_table related_tables.service_templates_table %}
     </div>
 </div>
 
 <div class="card mt-3">
     <h5 class="card-header">Services Using These Templates</h5>
     <div class="card-body">
-        {% render_table services_table %}
+        {% render_table related_tables.services_table %}
     </div>
 </div>
 
