--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -18,18 +18,34 @@
   </div>
   
 <div class="col col-md-6">
-<div class="card">
-    <h5 class="card-header">Service Templates</h5>
-    <div class="card-body">
-        {% render_table related_tables.service_templates_table %}
-    </div>
+  {% for table in related_tables %}
+  <div class="card">
+      <h5 class="card-header">{{ table.name|capfirst }}</h5>
+      <table class="table table-hover attr-table">
+          <tbody>
+              {% for obj in table.objects %}
+                  <tr>
+                      <td>
+                          {% if obj.get_absolute_url %}
+                              <!-- If the related object has a URL, link it -->
+                              <a href="{{ obj.get_absolute_url }}">{{ obj }}</a>
+                          {% else %}
+                              <!-- Otherwise, just display the object name or field -->
+                              {{ obj }}
+                          {% endif %}
+                      </td>
+                  </tr>
+              {% empty %}
+                  <tr>
+                      <td>No related objects found.</td>
+                  </tr>
+              {% endfor %}
+          </tbody>
+      </table>
+  </div>
+  {% endfor %}
+  {% include 'inc/panels/tags.html' %}
+  {% include 'inc/panels/comments.html' %}
 </div>
-
-<div class="card mt-3">
-    <h5 class="card-header">Services Using These Templates</h5>
-    <div class="card-body">
-        {% render_table related_tables.services_table %}
-    </div>
 </div>
-
-{% endblock %}
+{% endblock content %}
