--- a/netbox_service_management/templates/netbox_service_management/solution.html
+++ b/netbox_service_management/templates/netbox_service_management/solution.html
@@ -4,16 +4,20 @@
 {% block content %}
 <div class="row mb-3">
   <div class="col col-md-6">
-    <div class="card">
-      <h5 class="card-header">Solution</h5>
-
-      <table class="table table-hover attr-table">
-        <tr>
-          <th scope="row">Name</th>
-          <td>{{ object.name }}</td>
-        </tr>
-      </table>
+    <h5 class="card-header">Solution Details</h5>
+    <div class="card-body">
+        <table class="table table-hover attr-table">
+            {% for field in object._meta.get_fields %}
+                {% if not field.is_relation %}  <!-- Exclude related fields if not needed -->
+                    <tr>
+                        <th scope="row">{{ field.verbose_name|capfirst }}</th>
+                        <td>{{ object|getattr:field.name }}</td>
+                    </tr>
+                {% endif %}
+            {% endfor %}
+        </table>
     </div>
+  </div>
     {% include 'inc/panels/custom_fields.html' %}
   </div>
   
@@ -23,23 +27,7 @@
       <h5 class="card-header">{{ table.name|capfirst }}</h5>
       <table class="table table-hover attr-table">
           <tbody>
-              {% for obj in table.objects %}
-                  <tr>
-                      <td>
-                          {% if obj.get_absolute_url %}
-                              <!-- If the related object has a URL, link it -->
-                              <a href="{{ obj.get_absolute_url }}">{{ obj }}</a>
-                          {% else %}
-                              <!-- Otherwise, just display the object name or field -->
-                              {{ obj }}
-                          {% endif %}
-                      </td>
-                  </tr>
-              {% empty %}
-                  <tr>
-                      <td>No related objects found.</td>
-                  </tr>
-              {% endfor %}
+           {% render_table table.objects %}
           </tbody>
       </table>
   </div>
