--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -9,7 +9,13 @@
             {% for field in field_data %}
                 <tr>
                     <th scope="row">{{ field.name|capfirst }}</th>
-                    <td>{{ field.value }}</td>
+                    <td>
+                        {% if field.url %}
+                            <a href="{{ field.url }}">{{ field.value }}</a>
+                        {% else %}
+                            {{ field.value }}
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
         </table>
