--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="card">
-    <h5 class="card-header">Details</h5>
+    <h5 class="card-header">{{ object_name|capfirst }} Details</h5>
     <div class="card-body">
         <table class="table table-hover attr-table">
             {% for field in field_data %}
