--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -2,6 +2,8 @@
 {% load render_table from django_tables2 %}
 
 {% block content %}
+<div class="row mb-3">
+<div class="col col-md-6">
 <div class="card">
     <h5 class="card-header">{{ object_name|capfirst }} Details</h5>
     <div class="card-body">
@@ -22,6 +24,7 @@
     </div>
 </div>
 
+<div class="col col-md-6">
 {% for related_table in related_tables %}
     <div class="card mt-3">
         <h5 class="card-header">{{ related_table.name|capfirst }}</h5>
@@ -31,4 +34,8 @@
     </div>
 {% endfor %}
 
+{% include 'inc/panels/tags.html' %}
+{% include 'inc/panels/comments.html' %}
+  </div>
+</div>
 {% endblock %}
