--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -24,8 +24,7 @@
     </div>
 </div>
 </div>
-</div>
-<div class="row mb-3">
+<div class="col col-md-4">
 {% for related_table in related_tables %}
     <div class="card mt-3">
         <h5 class="card-header">{{ related_table.name|capfirst }}</h5>
