--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -2,6 +2,7 @@
 {% load render_table from django_tables2 %}
 
 {% block content %}
+<div class="row mb-3">
 <div class="col col-md-4">
 <div class="card">
     <h5 class="card-header">Details</h5>
@@ -35,5 +36,6 @@
 
 {% include 'inc/panels/tags.html' %}
 {% include 'inc/panels/comments.html' %}
+</div>
 </div>
 {% endblock %}
