--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -13,7 +13,7 @@
                     <th scope="row">{{ field.name|title }}</th>
                     <td>
                         {% if field.url %}
-                            <a href="{{ field.url }}">{{ field.value|title }}</a>
+                            <a href="{{ field.url }}">{{ field.value }}</a>
                         {% else %}
                             {{ field.value }}
                         {% endif %}
