--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -2,6 +2,10 @@
 {% load render_table from django_tables2 %}
 
 {% block content %}
+<script type="module">
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    mermaid.initialize({ startOnLoad: true });
+</script>
 <div class="row mb-3">
 <div class="col col-md-5">
 <div class="card">
@@ -23,6 +27,16 @@
         </table>
     </div>
 </div>
+
+<div class="card mt-3">
+    <h5 class="card-header">Relationship Diagram</h5>
+    <div class="card-body">
+        <div class="mermaid">
+            {{ mermaid_diagram }}
+        </div>
+    </div>
+</div>
+
 </div>
 <div class="col col-md-6">
 {% for related_table in related_tables %}
