--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -27,16 +27,6 @@
         </table>
     </div>
 </div>
-
-<div class="card mt-3">
-    <h5 class="card-header">Relationship Diagram</h5>
-    <div class="card-body">
-        <div class="mermaid">
-            {{ mermaid_diagram }}
-        </div>
-    </div>
-</div>
-
 </div>
 <div class="col col-md-6">
 {% for related_table in related_tables %}
@@ -58,5 +48,15 @@
 {% include 'inc/panels/tags.html' %}
 {% include 'inc/panels/comments.html' %}
 </div>
+<div class="row mb-3">
+    <div class="card mt-3">
+        <h5 class="card-header">Relationship Diagram</h5>
+        <div class="card-body">
+            <div class="mermaid">
+                {{ mermaid_diagram }}
+            </div>
+        </div>
+    </div>
+ </div></div>   
 </div>
 {% endblock %}
