--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -52,7 +52,7 @@
     <div class="card mt-3">
         <h5 class="card-header">Relationship Diagram</h5>
         <div class="card-body">
-            <div class="mermaid">
+            <div class="mermaid" style="width: 100%; height: 500px; overflow-x: auto;">
                 {{ mermaid_diagram }}
             </div>
         </div>
