--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -47,7 +47,7 @@
 </div>
 <div class="row mb-3">
     <div class="card mt-3">
-        <h5 class="card-header">Relationship Diagram</h5>
+        <!-- <h5 class="card-header">Relationship Diagram</h5> -->
         <div class="card-body">
             <div class="mermaid" style="width: 100%;">
                 {{ mermaid_legend }}
@@ -57,14 +57,14 @@
             </div>
         </div>
     </div>
-    <div class="card mt-3">
+    <!-- <div class="card mt-3">
         <div class="card-header">
             Mermaid Diagram Definition
         </div>
         <div class="card-body">
             <pre>{{ mermaid_diagram }}</pre>
         </div>
-    </div>
+    </div> -->
  </div>
 </div>   
 </div>
