--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -2,6 +2,11 @@
 {% load render_table from django_tables2 %}
 
 {% block content %}
+<style>
+    .mermaid {
+        width: 100%;
+    }
+</style>
 <script type="module">
     import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
     mermaid.initialize({ startOnLoad: true });
