--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -66,14 +66,14 @@
             </div>
         </div>
     </div>
-    <!-- <div class="card mt-3">
+    <div class="card mt-3">
         <div class="card-header">
             Mermaid Diagram Definition
         </div>
         <div class="card-body">
             <pre>{{ mermaid_diagram }}</pre>
         </div>
-    </div> -->
+    </div>
  </div>
 </div>   
 </div>
