--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -5,10 +5,10 @@
 <style>
     .mermaid {
         width: 100% !important;
-        display: block;
+        text-align: center;
     }
     .mermaid svg {
-        width: 100% !important;
+        display: inline-block;
     }
 </style>
 
