--- a/netbox_service_management/templates/netbox_service_management/default-detail.html
+++ b/netbox_service_management/templates/netbox_service_management/default-detail.html
@@ -8,6 +8,7 @@
         text-align: center;
     }
     .mermaid svg {
+        width: 100% !important;
         display: inline-block;
     }
 </style>
