--- a/netbox_service_management/templates/netbox_service_management/default-list.html
+++ b/netbox_service_management/templates/netbox_service_management/default-list.html
@@ -1,4 +1,4 @@
-{% extends 'netbox/base.html' %}
+{% extends 'generic/object_list.html' %}
 {% block buttons %}
   <a href="{% url 'plugins:netbox_service_management:service_import' %}" class="btn btn-primary">
     <i class="mdi mdi-upload"></i> Import Services
